fix: scroll not visible on settings windows (#1763)
This release fixes an issue with scrollbar not appearing on settings window. Thanks to DavetheGrave for finding.

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -4740,3 +4740,7 @@ section#settings a:hover {
   /*line-height: 2rem;*/
   font-size: revert-layer;
 }
+
+.scrollable {
+  --scroll-margin: 0.2rem;
+}
